Sonar Review comments - addressed.